# sigint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  deploy.sh  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/agents/: speckit.constitution.agent.md  speckit.plan.agent.md  speckit.specify.agent.md
.github/prompts/: speckit.constitution.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md  governance-catalog.yaml
.specify/memory/backups/: governance-catalog_20260108_223617.yaml
config/: feeds.json
frontend/: app.js  index.html  map.css  map.js  style.css
infrastructure/: app.py  cdk.json  requirements.txt
lambdas/analyzer/: __init__.py  handler.py
lambdas/archive_cleanup/: handler.py
lambdas/editor/: handler.py
lambdas/narrative/: handler.py
lambdas/reporters/: handler.py
lambdas/rss_ingest/: __init__.py  handler.py
lambdas/shared/: __init__.py  correlation_engine.py  feed_fetcher.py  llm_client.py  models.py  requirements.txt  s3_store.py  twitter_client.py  unified_prompt.py
lambdas/twitter/: __init__.py  handler.py
scripts/: check-status.sh
specs/: INTEGRATION.md
specs/add-a-market-reporter-agent-to-the-sigint-dashboar/: .workflow-metadata.json  spec.md
specs/add-age-based-article-filtering-with-a-frontend-ti/: .workflow-metadata.json  spec.md
specs/integrate-a-leaflet-world-map-into-the-sigint-dash/: .workflow-metadata.json  spec.md
specs/integrate-twitter-x-feeds-into-sigint-dashboard-us/: .workflow-metadata.json  spec.md
specs/refactor-sigint-to-unified-multi-source-analysis-a/: .workflow-metadata.json  spec.md  tasks.md
specs/sigint-refinement-plan/: plan.md
specs/twitter-x-integration/: plan.md  tasks.md
specs/unified-multi-source-analysis/: plan.md
tests/: __init__.py  conftest.py
(+12 files in other folders)
